--- a/_posts/2018-02-14-메모장.md
+++ b/_posts/2018-02-14-메모장.md
@@ -3,8 +3,10 @@
 #### macdown 이미지 가져오고 사이즈 조절하는 법
 
 1. github 이미지 폴더에 이미지 파일 넣기
-2. <img src="/images/이미지이름" width="" height="">
+2. img src="/images/이미지이름" width="" height=""
+(<열고, >닫고)
 
+----
 #### error: failed to push some refs to 해결방법
 git add .
 
