--- a/_posts/2018-03-07-ImageNet.md
+++ b/_posts/2018-03-07-ImageNet.md
@@ -2,17 +2,17 @@
 
 ### Contribution
 
-- ImageNet 대회에서 전년도 대비 약 9% 이상의 성능 향상으로 압도적인 성능으로 1위를 하였다.
-- GPU를 사용하여 매우 의미 있는 결과를 얻어 이후 CNN 구조를 설계할 때 GPU를 사용하는 것이 대세가 되었다.
-- 현재 classification 모델의 표준인 <CNN-FC> 구조를 제안하였다.
+- ImageNet 대회에서 전년도 대비 약 9% 이상의 성능 향상으로 압도적인 성능으로 1위를 하였습니다.
+- GPU를 사용하여 매우 의미 있는 결과를 얻어 이후 CNN 구조를 설계할 때 GPU를 사용하는 것이 대세가 되었습니다.
+- 현재 classification 모델의 표준인 <CNN-FC> 구조를 제안하였습니다.
 - 성능 향상과 training 시간을 향상시키기 위한 여러가지 기능(ReLU, LRN, Data augmentation, Dropout)을 포함하였습니다.
 
 ----
 ### Architexture
 <img src="/images/AlexNet.png" width="500" height="200">  
 
-- 위 그림의 설명과 같이 5 Convolution Layers, 3 Fully-Connected Layers, 1000 ways Softmax로 구성되어있다.
-- 당시 GPU의 스펙이 낮아 2개의 GPU를 병렬로 사용하여 학습하였다.(GTX580 3GB사용)
+- 위 그림의 설명과 같이 5 Convolution Layers, 3 Fully-Connected Layers, 1000 ways Softmax로 구성되어있습니다.
+- 당시 GPU의 스펙이 낮아 2개의 GPU를 병렬로 사용하여 학습하였습니다.(GTX580 3GB사용)
 
 ----
 ### Algorithm
