--- a/_posts/2018-03-07-ImageNet.md
+++ b/_posts/2018-03-07-ImageNet.md
@@ -35,42 +35,93 @@ AlexNet에서는 256 *
 Dropout은 Network의 일부를 생략하여 다른 Model을 학습한 것과 같은 효과를 얻어 overfitting을 개선하는 방법입니다. AlexNet에서는 test할 때 모든 뉴런을 사용하지만, output에 0.5를 곱해주었다. 이 방법은 처음이자 마지막으로 수행되었다고 합니다.
 
 ## ZFNet(2013)
+### Contribution
+
+- ZFNet의 구조는 AlexNet에서 GPU를 하나만 쓰고 일부 convolution layer의 kernel 사이즈와 stride를 일부 조절해주었습니다.
+- ZFNet은 CNN을 가시화하여 CNN의 중간 과정을 눈으로 보고 개선 방향을 파악할 수 있는 방법을 만들었습니다.(Visualizing)
+
+### Architexture
 <img src="/images/ZFNet.png" width="500" height="200">
 
-ZFNet의 구조는 AlexNet에서 GPU를 하나만 쓰고 일부 convolution layer의 kernel 사이즈와 stride를 일부 조절해주었다.(layers1의 filter 사이즈를 11 * 11 -> 7 * 7, stride를 4 -> 1로 수정해주었고, 이에 따라 layers2의 stride를 1 -> 2로 수정하였다.)
-ZFNet은 CNN을 가시화하여 CNN의 중간 과정을 눈으로 보고 개선 방향을 파악할 수 있는 방법을 만들었다.(Visualizing)
+- layers1의 filter 사이즈를 11 * 11 -> 7 * 7, stride를 4 -> 1로 수정해주었고, 이에 따라 layers2의 stride를 1 -> 2로 수정하였습니다.
 
-### Visualizing
-CNN은 convolution계산 후 활성 함수를 통해 feature map을 생성하고, pooling하여 이미지를 축소 시키는 것을 반복하는데 이 과적을 반대로 해주어 원본 이미지에 mapping할 수 있는 이미지를 생성 할 수 있을 것이다.<img src="/images/ZFNet_1.png" width="250" height="350">
+### Algorithm
+#### Visualizing
+CNN은 convolution계산 후 활성 함수를 통해 feature map을 생성하고, pooling하여 이미지를 축소 시키는 것을 반복하는데 이 과적을 반대로 해주어 원본 이미지에 mapping할 수 있는 이미지를 생성 할 수 있습니다.  <img src="/images/ZFNet_1.png" width="250" height="350">  
+max-pooling은 이미지를 축소 시키는 과정에서 가장 강한 자극을 전달하는데 이 과정을 반대로하면 어느 부분이 강한 자극인지를 알 수 없는 문제가 생깁니다. Visualizing은 가장 강한 자극의 위치를 가지고 있도록 하여 이와 같은 문제를 해결하였습니다.## GoogLeNet(2014)
+### Contribution
+- 이전(~2013)의 CNN과 달리 망의 깊이가 깊어지게 되었습니다.
+- AlexNet과 비교하여 불과 2년만에 약 10% 정도의 에러율을 낮추었습니다.
+- 효과적으로 차원을 줄이면서 망을 깊게 할 수 있는 방법(Inxeption Module)을 개발하였습니다.
+- GoogLeNet은 AlexNet에 비해 망의 깊이는 훨씬 깊은데 free parameter의 수는 1/12수준이고, 전체 연산량도 AlexNet에 비해 적다.
+- GoogLeNet에선 vanishing gradient문제를 극복하기 위하여 Auxiliary classifier를 중간 2곳에 두었다.
 
-max-pooling은 이미지를 축소 시키는 과정에서 가장 강한 자극을 전달하는데 이 과정을 반대로하면 어느 부분이 강한 자극인지를 알 수 없는 문제가 생긴다. Visualizing은 가장 강한 자극의 위치를 가지고 있도록 하여 이와 같은 문제를 해결하였다.## VGG(2014)
-stride는 모두 1, 제로패딩 1, 모든 convolution filter의 크기는 3 * 3 pooling은 2 * 2을 사용해주었다.
+### Architexture
+### Algorithm
 
-간단한 방법론으로 좋은 성적을 얻었다.
 
-## GoogLeNet(2014)
-<img src="/images/GoogLeNet.png" width="300" height="200">
+#### NIN(Network In Network)
+<img src="/images/MLP.png" width="300" height="200">  
+- convolution kernel 대신에 MLP를 사용합니다.  
+- MLP는 convolution kernel 보다 non-linear한 성질을 잘 활용할 수 있기 때문에 feature를 추출하는 능력이 우수합니다.  
+- 1 * 1 convolution을 사용하여 feature-map을 줄였습니다.  
+- CNN의 최종단에서 흔히 보이는 Fully-connected NN 대신에 Global average pooling을 사용합니다.    
 
-Filter concatenation은 filter를 채널방향으로 더한 것을 의미한다. 
 
-(b)그림은 (a)모델의 개선된 모델이다. 채널의 수를 중간에 한 번 줄였을 때 layers가 오히려 하나 더 쓰였는데 이 네트워크를 정의하는 파라미터의 수가 줄어든다. 이는 convolution의 파라미터를 정의하는 것은 input채널과 output채널이기 때문이다.
+#### Inception
+<img src="/images/GoogLeNet.png" width="300" height="200">    
+- 원래는 (a)의 구조를 고안하였지만 3 * 3과 5 * 5는 연산량이 expensive하기 때문에 (b)와 같이 1 * 1을 통하여 feature-map의 차원을 줄여 연산량의 균형을 맞춰주었습니다.  
+- 다양한 크기의 convolution kernel(그림의 파란색 부분)을 통해 다양한 scale의 feature를 효과적으로 추출하는 것이 가능해졌습니다.
+- Max-Pooling의 경우 1 * 1이 뒤에있는데 이는 출력 채널의 크기를 맞추기 위함입니다. 
 
-Receptive field : 출력단에 있는 하나의 픽셀이 입력 이미지의 얼마의 픽셀을 보고 이 정보가 취합되었는지를 의미한다.
+#### Auxiliary classifier
+- back-propagation시에 Auxiliary classifier와 최종 출력으로부터의 정상적인 back-propagation결과를 결합시킵니다.
+- 학습을 도와주기 위한 도우미의 역할이며, 학습을 끝난 후에는 제거합니다.
 
-Max-Pooling의 경우 1 * 1이 뒤에있는데 이는 출력 채널의 크기를 맞추기 위함이다. 
+## VGGNet(2014)
+### Contribution
+- 2014년 ILSVRC에서 GoogLeNet와 근소한 차이로 2위를 차지하였습니다. 하지만 GoogLeNet보다 훨씬 구조가 간단하여 더 많이 사용되는 편입니다.  
+- 전반적인 구조는 LeNet5, AlexNet와 크게 다르지 않지만 깊이에서 차이가 납니다.
+- GoogLeNet(5 milion)에 비하여 VGGNet(133 milion)의 파라미터 개수가 많다는 단점이 있습니다.
+
+
+### Architexture
+<img src="/images/VGGNet_1.png" width="300" height="200"> 
+### Algorithm
+- vanishing/exploding gradient의 문제를 해결하기 위해서 VGGNet는 11-layer 구조의 학습 결과를 더 깊은 layer(13,16,19)의 파라미터 초기화 시에 이용함으로써 문제를 해결함과 동시에 학습시간도 줄여주었습니다.  
+
+#### Factorizing Convolutions
+큰 필터 크기를 갖는 convolution kernel을 인수 분해 하면, 작은 kernel 여러개로 구성된 deep network를 만들 수 있으며, parameter의 수가 더 줄어들면서 망은 깊어지는 효과를 얻을 수 있습니다.  
+5 * 5 convolution은 2 layer의 3 * 3 convolution으로 구현 할 수 있으며, free parameter는 28%만큼 절감 할 수 있습니다.  
+인수분해를 symmetry를 유지하는 방식으로도 가능하지만, symmetry를 유지 하지 않고 row, column방향으로 인수 분해하는 것도 가능합니다.(3 * 3 -> 1 * 3, 3 * 1)
+
 
 ## ResNet(2015)
-<img src="/images/GoogLeNet.png" width="100" height="300">
+### Contribution
+
+- GoogLeNet보다 약 두배의 성능이 좋아졌으며, error율이 3.57%로 사람의 오차율(5%)보다 더 좋은 결과를 얻었습니다.  
+- classification뿐만 아니라 localization, detection 분야에서도 압도적인 성능을 보였다.
+
+
+### Architexture
+#### Deeper Bottleneck Architecture
+<img src="/images/Bottlenect.png" width="300" height="200">   
+- 위의 그림처럼 residual function은 1 * 1, 3 * 3, 1 * 1로 구성되어있습니다. 이는 Residual Learning을 위해선 입력과 출력의 차원이 같아야하기 때문이다.
+- 이러한 Bottleneck 구조는 차원을 줄였다가 다시 차원을 늘려주어 GoogLeNet의 Inception 구조처럼 연산량을 줄여주게 됩니다.  
+
+### Algorithm
+
+#### Residual Learning
+
+<img src="/images/Residual.png" width="300" height="200"> 
+
+- 출력 H(x)를 얻는 것이 목표가 아니라 H(x)-x를 얻는것이 목표입니다.
+- 입력에서 바로 출력으로 연결되는 shortcut 연결이 존재합니다.
+
 
 network가 deep 할 때 학습이 잘되는가를 생각해보면 아니라는 것을 알 수 있다. 이는 Vanishing/exploding gradients때문인데 이는 Better initialization methods/ batch normalization/ ReLU 과 같은 방법으로 해결할 수 있다.
 
 Overfitting는 Training 에러는 줄어들고 Training acc는 늘어나는데 test acc가 계속 떨어질경우를 말한다. ResNet은 트레이닝도 잘되고 테스트도 잘되는데 성능이 잘 안나오는 경우인 Degradation을 해결하려하였다.
-
-### Residual learning building block어떤 타겟과 현재 입력과의 차이만을 학습하게 해주는 방법이다. 입력과 출력의 차원이 같아야 한다는 단점을 갖고있다. 
-
-1 * 1 conv를 이용하여 채널을 줄여주고 3 * 3 conv를 해주고 다시 1 * 1 conv를 해준다. 마지막에 다시 1 * 1 conv를 해주는 이유는 입력과 출력의 채널을 같게 해주어야하기 때문에 추가해준것이다. 만약 3 * 3 conv의 채널을  입력 채널과 같게해주면 바로 더해줄 수는 있어서 마지막의 1 * 1 conv가 필요없지만 파라미터의 수가 많아질 것이다.
-
-ResNet의 한계는 Layers의 개수가 1000개를 넘어가면 여전히 잘 학습이 안되는 성능을 보인다는 것이다.
 
 ## Reference
 
