--- a/_posts/2019-01-09-환경설정.md
+++ b/_posts/2019-01-09-환경설정.md
@@ -127,8 +127,22 @@ $ cd build
 - cmake를 이용해 컴파일 설정을 해준다.
 
 ~~~
-$ cmake -D CMAKE_BUILD_TYPE=RELEASE -D WITH_TBB=ON -D WITH_V4L=ON
- -D WITH_QT=ON -D WITH_OPENGL=ON -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib-3.4.0/modules -D OPENCV_ENABLE_NONFREE=True -D PYTHON_DEFAULT_EXECUTABLE=/usr/bin/python3 -D WITH_CUDA=ON -D ENABLE_FAST_MATH=ON -D CUDA_FAST_MATH=ON -D CUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda-9.0 -D WITH_CUBLAS=ON -D CUDA_GENERATION=Maxwell -D CUDA_NVCC_FLAGS="-D_FORCE_INLINES" -DCUDA_ARCH=52 ..
+$ cmake \
+-D CMAKE_BUILD_TYPE=RELEASE \
+-D WITH_TBB=ON \
+-D WITH_V4L=ON \
+-D WITH_QT=ON \
+-D WITH_OPENGL=ON \
+-D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib-3.4.0/modules \
+-D OPENCV_ENABLE_NONFREE=True \
+-D PYTHON_DEFAULT_EXECUTABLE=/usr/bin/python3 \
+-D WITH_CUDA=ON \
+-D ENABLE_FAST_MATH=ON \
+-D CUDA_FAST_MATH=ON \
+-D CUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda-9.0 \
+-D WITH_CUBLAS=ON \
+-D CUDA_GENERATION=Maxwell \
+-D CUDA_NVCC_FLAGS="-D_FORCE_INLINES" -DCUDA_ARCH=52 ..
 ~~~
 
 - CPU core수를 확인한 후 make를 사용하여 컴파일 해준다.(-j뒤에 core수를 넣어주면 된다.)
